--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,6 @@ hr.api.url=http://54.211.225.58:1000/ords/hr
 
 #spartan api base url
 spartan.api.url=http://54.211.225.58:8000/api
+
+#zip code api url
+zip.code.api.url=http://api.zippopotam.us/{country}/{postal-code}
