--- a/configuration.properties
+++ b/configuration.properties
@@ -5,3 +5,8 @@ spartan.api.url=http://54.91.133.234:8000/api
 
 #zip code api url
 zip.code.api.url=http://api.zippopotam.us
+
+#spartan db info
+spartan.db.url=jdbc:oracle:thin:@54.91.133.234:1521:XE
+spartan.db.userName=sp
+spartan.db.password=SP
