--- a/configuration.properties
+++ b/configuration.properties
@@ -2,6 +2,7 @@ hr.api.url=http://54.91.133.234:1000/ords/hr
 
 #spartan api base url
 spartan.api.url=http://54.91.133.234:8000/api
+spartan.secure.api.url=http://54.91.133.234:7000/api
 
 #zip code api url
 zip.code.api.url=http://api.zippopotam.us
