--- a/configuration.properties
+++ b/configuration.properties
@@ -11,3 +11,17 @@ zip.code.api.url=http://api.zippopotam.us
 spartan.db.url=jdbc:oracle:thin:@54.91.133.234:1521:XE
 spartan.db.userName=sp
 spartan.db.password=SP
+
+#book it
+bookit.base.url=https://cybertek-reservation-api-qa3.herokuapp.com
+
+#book it users with type
+teacher_email=blyst6@si.edu
+teacher_password=barbabaslyst
+
+team_member_email=fscoughx@msu.edu
+team_member_password=feodorascough
+
+team_leader_email=lfinnisz@yolasite.com
+team_leader_password=lissiefinnis
+
