--- a/configuration.properties
+++ b/configuration.properties
@@ -25,3 +25,4 @@ team_member_password=feodorascough
 team_leader_email=lfinnisz@yolasite.com
 team_leader_password=lissiefinnis
 
+mock_server_url=https://21e1db9f-5699-40d9-8afd-88306f50e8cc.mock.pstmn.io
